<!--
    Copyright © 2016 BSWeb.DK <bsweb@bruchhaus.dk>
    This file is part of SMSIntent (com.bswebdk.smsintent).

    SMSIntent is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SMSIntent is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SMSIntent.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/dialog_vertical_margin"
    android:paddingLeft="@dimen/dialog_horizontal_margin"
    android:paddingRight="@dimen/dialog_horizontal_margin"
    android:paddingTop="@dimen/dialog_vertical_margin"
    tools:context=".AboutActivity" >

    <LinearLayout
        android:id="@+id/info_row_1"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/info_created"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/info_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/info_row_2"
        android:layout_below="@id/info_row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/info_modified"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/info_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/info_row_3"
        android:layout_below="@id/info_row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/info_lastuse"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/info_lastuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/info_row_4"
        android:layout_below="@id/info_row_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/info_usages"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/info_usages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>
    
    
    <Button
        android:id="@+id/info_close"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/info_row_4"
        android:layout_marginTop="20dp"
        android:text="@string/close"
        android:background="?android:attr/selectableItemBackground" />
    
</RelativeLayout>